Поправил логику